--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -8,8 +8,8 @@
 </head>
 <body>
         {% if state %}
-            <h1>State</h1>
-            <h3>Cities</h3>
+            <h1>State: {{ state.name }}</h1>
+            <h3>Cities:</h3>
                 <ul>
                 {% for city in state.cities| sort(attribute="name") %}
                     <li>{{ city.id }}: <b>{{ city.name }}</b></li>
